Fixed spacing once again

--- a/less/menu.less
+++ b/less/menu.less
@@ -11,7 +11,7 @@
 		content: "";
 		position: absolute;
 		top: 10px;
-		left: 22px;
+		left: 18px;
 		width: 40px;
 		height: 40px;
 		border-radius: 50%;
@@ -208,7 +208,7 @@
     transition: all;
     -webkit-transition-duration: 300ms;
     transition-duration: 300ms;
-    margin: 10px 20px;
+    margin: 10px 16px;
 
     .line {
 	    width: 18px;
